# doubleKeyKeyboard

./: .gitignore  README.md  settings.gradle.kts  ui.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  builtin_words.cpp  builtin_words.h  jni_bridge.cpp  keyboard_engine.cpp  keyboard_engine.h  predictor.cpp  predictor.h
app/src/main/java/com/blackberrykeyboard/: OnboardingActivity.java  SettingsActivity.java  SimpleItemSelectedListener.java
app/src/main/java/com/blackberrykeyboard/dict/: DictionaryLoader.java
app/src/main/java/com/blackberrykeyboard/ime/: BlackBerryKeyboardView.java  KeyboardIME.java
app/src/main/java/com/blackberrykeyboard/nativeengine/: NativeEngine.java
app/src/main/java/com/blackberrykeyboard/prefs/: KeyboardPreferences.java  KeyboardTheme.java
app/src/main/java/com/blackberrykeyboard/util/: KeySoundPlayer.java  KeyboardSetupHelper.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_onboarding.xml  activity_settings.xml  keyboard_view.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml
docs/: README.md  architecture.md  configuration.md  installation.md  user-guide.md
